# AI-Scientific-Lab

./: .gitignore  AGENTS.md  Dockerfile  GITFLOW.md  LAB_GUIDE.md  LAB_NOTEBOOK.md  LICENSE  Makefile  PAPERS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: development.md  setup.md
template/domain-example/concept-example/: README.md
